--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>I am Manash Mondal, a student of one of the prestigious Institution of West Bengal i.e Asansol Engineering College. I am a day dreamer with great Vision to move forward and represent my country in Global Level, for this I will make every necessary step.</p>
             </div>
             <div>
-                <img src="G:\KALAS JATRA\IMG_20201029_082357.jpg">
+                <img src="./IMG_20201029_082357.jpg">
             </div>
         </section>
 
@@ -63,17 +63,17 @@
             </h1>
             <div class="project-card-container">
                 <div class="project-card">
-                   <img src="G:\KALAS JATRA\aa\1.jpeg">
+                   <img src="./1.jpeg">
                     <h3>Water Wheel</h3>
                     <p>This is the model of water wheel.Usually it was used by the ancient civilization for irrigation purpose.</p>
                 </div>
                 <div class="project-card">
-                    <img src="G:\KALAS JATRA\aa\2.jpeg" alt="" srcset="">
+                    <img src="./2.jpeg" alt="" srcset="">
                     <h3>Drawing</h3>
                     <p>This is the Pencil sketch of a lady. This Painting was used in our School decoration for Annual Function. </p>
                 </div>
                 <div class="project-card">
-                    <img src="G:\KALAS JATRA\aa\3.jpeg" alt="" srcset="">
+                    <img src="./3.jpeg" alt="" srcset="">
                     <h3>The Night Lamp Made of Ice-Cream Stick</h3>
                     <p>This is one of my project from Best out of Waste.</p>
                 </div>
